  - is_practical_number?/1
  - is_primary_pseudoperfect_number?/1
  - is_pseudoperfect_number?/1
  - is_erdos_nicolas_number?/1
  - is_weird_number?/11
  - is_primitive_pseudoperfect_number?/1
  - is_primitive_weird_number?/1
  - is_semiprime_number?/1
  - is_squarefree_semiprime?/1
  - is_kaprekar_number?/1
  - is_kaprekar_strict_number?/1
  - is_narcissistic_number?/1

### Sequences

 - A016825 - Positive integers congruent to 2 mod 4
 - A046759 - Economical numbers
 - A046760 - Wasteful numbers
 - A046758 - Equidigital numbers
 - A007770 - Happy numbers
 - A031177 - Unhappy numbers
 - A057716 - The non-powers of 2
 - A138591 - Sums of two or more consecutive nonnegative integers
 - A006753 - Smith (or joke) numbers
 - A019506 - Hoax numbers
 - A004144 - Nonhypotenuse numbers
 - A009003 - Hypotenuse numbers
 - A005153 - Practical numbers
 - A054377 - Primary pseudoperfect numbers
 - A005835 - Pseudoperfect (or semiperfect) numbers
 - A194472 - Erdős-Nicolas numbers
 - A006037 - Weird numbers
 - A006036 - Primitive pseudoperfect numbers
 - A002975 - Primitive weird numbers
 - A006886 - Kaprekar numbers
 - A053816 - Another version of the Kaprekar numbers
 - A005188 - Armstrong (or pluperfect, or Plus Perfect, or narcissistic) numbers
 - A010353 - Base-9 Armstrong or narcissistic numbers
 - A010354 - Base-8 Armstrong or narcissistic numbers
 - A010350 - Base-7 Armstrong or narcissistic numbers
 - A010348 - Base-6 Armstrong or narcissistic numbers
 - A010346 - Base-5 Armstrong or narcissistic numbers
 - A010344 - Base-4 Armstrong or narcissistic numbers
 - A161948 - Base-11 Armstrong or narcissistic numbers
 - A161949 - Base-12 Armstrong or narcissistic numbers
 - A161950 - Base-13 Armstrong or narcissistic numbers
 - A161951 - Base-14 Armstrong or narcissistic numbers
 - A161952 - Base-15 Armstrong or narcissistic numbers
 - A161953 - Base-16 Armstrong or narcissistic numbers
 - A114904 - Sorted numbers of digits of any base-10 narcissistic number